veil-tests/src/compile_tests/fail/redact_too_many.stderr
error: only one `#[redact(...)]` attribute is allowed per field
 --> src/compile_tests/fail/redact_too_many.rs:5:5
  |
5 |     #[redact]
  |     ^

error: a `#[redact(variant, ...)]` is already present
  --> src/compile_tests/fail/redact_too_many.rs:12:5
   |
12 |     #[redact(variant)]
   |     ^

error: expected only one or zero `#[redact(all, ...)]` attributes
  --> src/compile_tests/fail/redact_too_many.rs:19:1
   |
19 | #[redact(all)]
   | ^

error: too many `#[redact(...)]` attributes specified
  --> src/compile_tests/fail/redact_too_many.rs:26:1
   |
26 | #[redact(all, variant)]
   | ^

error: too many `#[redact(...)]` attributes specified
  --> src/compile_tests/fail/redact_too_many.rs:39:5
   |
39 |     #[redact(variant)]
   |     ^

error: a `#[redact(all, ...)]` is already present
  --> src/compile_tests/fail/redact_too_many.rs:48:5
   |
48 |     #[redact(all)]
   |     ^

error: a `#[redact(variant, ...)]` is already present
  --> src/compile_tests/fail/redact_too_many.rs:57:5
   |
57 |     #[redact(variant)]
   |     ^
